# neuroscribe

./: .commitlintrc.json  .editorconfig  .geminiignore.txt  .gitignore  .prettierignore  .prettierrc  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  blueprint_agente.md  eslint.config.mjs  estrategia_neuroscribe_apuntes.md  package-lock.json  package.json  plan_economico_neuroscribe.md  progreso.md  supabase_schema.sql  vitest.config.ts
.atl/: skill-registry.md
.github/workflows/: release.yml
openspec/changes/multi-provider-api/: design.md  explore.md  proposal.md  tasks.md
openspec/specs/auth/: spec.md
openspec/specs/core/: spec.md
openspec/specs/database/: spec.md
openspec/specs/ia-local/: spec.md
openspec/specs/research/: spec.md
openspec/specs/tauri/: spec.md
openspec/specs/ui/: spec.md
scripts/: setup_dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 01_initial_schema.sql  02_licensing.sql  03_api_keys.sql  04_speaker_labels.sql  05_api_keys_model.sql
src-tauri/permissions/: allow-all-commands-v1.json  default.json  neuroscribe.json  sidecars.json
src-tauri/src/: crypto.rs  lib.rs
src/__tests__/: cn.test.ts  verify.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/actions/: documents.ts  folders.ts  ia.ts  profiles.ts  research.ts
src/app/login/: page.tsx
src/hooks/: useModels.tsx  useUI.tsx
src/types/: apiKeys.ts  citation-js.d.ts  database.ts  research.ts  transcription.ts
website/: index.html
(+72 files in other folders)
